[gd_scene load_steps=3 format=3 uid="uid://omnl58sf6lew"]

[ext_resource type="Script" path="res://Scripts/CardManagerV2.gd" id="1_rhju1"]
[ext_resource type="PackedScene" uid="uid://chqp1673xcd5a" path="res://Scence/card_v2.tscn" id="2_h2vhk"]

[node name="Drinking v2" type="Node2D"]
script = ExtResource("1_rhju1")
empty_card = ExtResource("2_h2vhk")

[node name="StockPile" type="Node2D" parent="."]
position = Vector2(540, 2827)

[node name="Card" parent="StockPile" instance=ExtResource("2_h2vhk")]
visible = false

[node name="CardPile" type="Node2D" parent="."]
position = Vector2(540, 910)

[node name="DiscardPile" type="Node2D" parent="."]
position = Vector2(-2116, 918)

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Debug" type="Label" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 1078.0
offset_bottom = 81.0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "downloading content from..."
